@@ -1,6 +1,6 @@
 package cn.az.code.thread;
 
-import cn.hutool.log.Log;
+import cn.az.code.util.LogUtil;
 
 /**
  * join方法可以让某个线程插到自己前面，等它执行完，自己才会继续执行。
@@ -8,8 +8,6 @@ import cn.hutool.log.Log;
  * @author az
  */
 public class ThreadJoinDemo {
-
-    private static final Log log = Log.get();
 
     public static void main(String[] args) {
         JoinRunnable jr = new JoinRunnable();
@@ -19,23 +17,26 @@ public class ThreadJoinDemo {
         try {
             t.join();
         } catch (InterruptedException e) {
-            log.error(e.getLocalizedMessage(), e);
+            LogUtil.error(e.getLocalizedMessage(), e);
         }
-        log.info("after join, finally my turn");
+        LogUtil.info("after join, finally my turn");
     }
 
     /**
-     * 16:36:25.454 [Thread-0] INFO cn.az.code.thread.ThreadJoinDemo - thread is running, 10
-     * 16:36:30.468 [Thread-0] INFO cn.az.code.thread.ThreadJoinDemo - thread is finished, 10
-     * 16:36:35.442 [main] INFO cn.az.code.thread.ThreadJoinDemo - after join, finally my turn
+     * 16:36:25.454 [Thread-0] INFO cn.az.code.thread.ThreadJoinDemo - thread is
+     * running, 10
+     * 16:36:30.468 [Thread-0] INFO cn.az.code.thread.ThreadJoinDemo - thread is
+     * finished, 10
+     * 16:36:35.442 [main] INFO cn.az.code.thread.ThreadJoinDemo - after join,
+     * finally my turn
      */
     static class JoinRunnable implements Runnable {
 
         @Override
         public void run() {
-            log.info("thread is running, {}", Thread.currentThread().getId());
+            LogUtil.info("thread is running, {}", Thread.currentThread().threadId());
             doSomething(5);
-            log.info("thread is finished, {} ", Thread.currentThread().getId());
+            LogUtil.info("thread is finished, {} ", Thread.currentThread().threadId());
         }
     }
 
@@ -43,7 +44,7 @@ public class ThreadJoinDemo {
         try {
             Thread.sleep(t * 1000);
         } catch (Exception e) {
-            log.error(e.getMessage(), e);
+            LogUtil.error(e.getMessage(), e);
         }
     }
 }
